Add 'ghost member' commands
